kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: darkenwald-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - keycloak.local
        - darkenwald.local
      secretName: keycloak-tls
  rules:
    - host: keycloak.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
    - host: darkenwald.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: darkenwald
                port:
                  number: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`keycloak.local`) && PathPrefix(`/auth`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
          sticky:
            cookie:
                httpOnly: true
      middlewares:
        - name: strip-keycloak-path
